# dokumenty-kasowe-veltro

./: .gitignore  README.md
.ai/specs/cash-documents/: cash-documents-mvp.md
backend/: .dockerignore  Dockerfile  compose.yaml  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: documents.py  export.py  imports.py  settings.py
backend/app/services/: epp.py  validation.py
backend/app/services/importers/: bank.py  base.py  file_readers.py  saldeo.py
backend/tests/: test_api.py  test_bank_import.py  test_epp.py  test_integration_flow.py  test_saldeo_import.py  test_validation.py
backend/tests/fixtures/: sample_bank.csv  sample_saldeo.csv
docs/superpowers/plans/: 2026-04-24-backend-docker-dev.md  2026-04-24-bank-import-feedback.md  2026-04-24-cash-documents-mvp.md
docs/superpowers/specs/: 2026-04-24-backend-docker-dev-design.md  2026-04-24-bank-import-feedback-design.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/import/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-shell.tsx  document-editor.tsx  document-table.tsx  export-panel.tsx  import-panel.tsx  settings-form.tsx  types.ts
frontend/lib/: api.ts
